<resources>
    <string name="app_name">Reciplease</string>
    <string name="enter_note">Enter note</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="textview">TextView</string>
    <string name="meal_image">Meal Image</string>
    <string name="Instructions">Meal Instructions</string>
    <string name="Category">Meal Category</string>
    <string name="Name">Meal Name</string>
    <string name="Area">Meal Cuisine</string>
    <string name="Ingredients">Meal Ingredients</string>
    <string name="heartBlack">🖤 Reciplease!</string>
    <string name="heartWhite">🤍 Remove</string>
    <string name="removeHeart">Remove Heart</string>
    <string name="addHeart">Add Heart</string>
</resources>